--- a/index.htm
+++ b/index.htm
@@ -49,79 +49,79 @@
 		</div>
 		<div style="font-size: 18px;"><a href="All_Wizard.htm">All Wizard Spells</a></div>
 		<div>Spells by Specialization: 
-			<a href="Vilify-13.github.io/Abjurer.htm">Abjurer</a>
-			<a href="Vilify-13.github.io/Conjurer.htm">Conjurer</a>
-			<a href="Vilify-13.github.io/Diviner.htm">Diviner</a>
-			<a href="Vilify-13.github.io/Enchanter.htm">Enchanter</a>
-			<a href="Vilify-13.github.io/Illusionist.htm">Illusionist</a>
-			<a href="Vilify-13.github.io/Invoker.htm">Invoker</a>
-			<a href="Vilify-13.github.io/Necromancer.htm">Necromancer</a>
-			<a href="Vilify-13.github.io/Transmuter.htm">Transmuter</a>
-			<a href="Vilify-13.github.io/Dimensionalist.htm">Dimensionalist</a>
+			<a href="Abjurer.htm">Abjurer</a>
+			<a href="Conjurer.htm">Conjurer</a>
+			<a href="Diviner.htm">Diviner</a>
+			<a href="Enchanter.htm">Enchanter</a>
+			<a href="Illusionist.htm">Illusionist</a>
+			<a href="Invoker.htm">Invoker</a>
+			<a href="Necromancer.htm">Necromancer</a>
+			<a href="Transmuter.htm">Transmuter</a>
+			<a href="Dimensionalist.htm">Dimensionalist</a>
 		</div>
 		<div>Spells by School:
-			<a href="Vilify-13.github.io/Abjuration.htm">Abjuration</a>
-			<a href="Vilify-13.github.io/Alteration.htm">Alteration</a>
-			<a href="Vilify-13.github.io/Conjuration.htm">Conjuration/Summoning</a>
-			<a href="Vilify-13.github.io/Divination.htm">Divination</a>
-			<a href="Vilify-13.github.io/Enchantment.htm">Enchantment/Charm</a>
-			<a href="Vilify-13.github.io/Evocation.htm">Invocation/Evocation</a>
-			<a href="Vilify-13.github.io/Illusion.htm">Illusion/Phantasm</a>
-			<a href="Vilify-13.github.io/Necromancy.htm">Necromancy</a>
+			<a href="Abjuration.htm">Abjuration</a>
+			<a href="Alteration.htm">Alteration</a>
+			<a href="Conjuration.htm">Conjuration/Summoning</a>
+			<a href="Divination.htm">Divination</a>
+			<a href="Enchantment.htm">Enchantment/Charm</a>
+			<a href="Evocation.htm">Invocation/Evocation</a>
+			<a href="Illusion.htm">Illusion/Phantasm</a>
+			<a href="Necromancy.htm">Necromancy</a>
 		</div>
-		<div style="font-size: 18px;"><a href="Vilify-13.github.io/All_Priest.htm">All Priest Spells</a></div>
+		<div style="font-size: 18px;"><a href="All_Priest.htm">All Priest Spells</a></div>
 			<div>Spells by Sphere:
-				<a href="Vilify-13.github.io/All.htm">All</a>
-				<a href="Vilify-13.github.io/Animal.htm">Animal</a>
-				<a href="Vilify-13.github.io/Astral.htm">Astral</a>
-				<a href="Vilify-13.github.io/Chaos.htm">Chaos</a>
-				<a href="Vilify-13.github.io/Charm.htm">Charm</a>
-				<a href="Vilify-13.github.io/Combat.htm">Combat</a>
-				<a href="Vilify-13.github.io/Creation.htm">Creation</a>
-				<a href="Vilify-13.github.io/Divination.htm">Divination</a>
-				<a href="Vilify-13.github.io/Elemental_Air.htm">Elemental Air</a>
-				<a href="Vilify-13.github.io/Elemental_Earth.htm">Elemental Earth</a>
-				<a href="Vilify-13.github.io/Elemental_Fire.htm">Elemental Fire</a>
-				<a href="Vilify-13.github.io/Elemental_Water.htm">Elemental Water</a>
-				<a href="Vilify-13.github.io/Guardian.htm">Guardian</a>
-				<a href="Vilify-13.github.io/Healing.htm">Healing</a>
-				<a href="Vilify-13.github.io/Law.htm">Law</a>
-				<a href="Vilify-13.github.io/Necromantic.htm">Necromantic</a>
-				<a href="Vilify-13.github.io/Numbers.htm">Numbers</a>
-				<a href="Vilify-13.github.io/Plant.htm">Plant</a>
-				<a href="Vilify-13.github.io/Protection.htm">Protection</a>
-				<a href="Vilify-13.github.io/Summoning.htm">Summoning</a>
-				<a href="Vilify-13.github.io/Sun.htm">Sun</a>
-				<a href="Vilify-13.github.io/Thought.htm">Thought</a>
-				<a href="Vilify-13.github.io/Time.htm">Time</a>
-				<a href="Vilify-13.github.io/Travelers.htm">Travelers</a>
-				<a href="Vilify-13.github.io/War.htm">War</a>
-				<a href="Vilify-13.github.io/Wards.htm">Wards</a>
-				<a href="Vilify-13.github.io/Weather.htm">Weather</a>
+				<a href="All.htm">All</a>
+				<a href="Animal.htm">Animal</a>
+				<a href="Astral.htm">Astral</a>
+				<a href="Chaos.htm">Chaos</a>
+				<a href="Charm.htm">Charm</a>
+				<a href="Combat.htm">Combat</a>
+				<a href="Creation.htm">Creation</a>
+				<a href="Divination.htm">Divination</a>
+				<a href="Elemental_Air.htm">Elemental Air</a>
+				<a href="Elemental_Earth.htm">Elemental Earth</a>
+				<a href="Elemental_Fire.htm">Elemental Fire</a>
+				<a href="Elemental_Water.htm">Elemental Water</a>
+				<a href="Guardian.htm">Guardian</a>
+				<a href="Healing.htm">Healing</a>
+				<a href="Law.htm">Law</a>
+				<a href="Necromantic.htm">Necromantic</a>
+				<a href="Numbers.htm">Numbers</a>
+				<a href="Plant.htm">Plant</a>
+				<a href="Protection.htm">Protection</a>
+				<a href="Summoning.htm">Summoning</a>
+				<a href="Sun.htm">Sun</a>
+				<a href="Thought.htm">Thought</a>
+				<a href="Time.htm">Time</a>
+				<a href="Travelers.htm">Travelers</a>
+				<a href="War.htm">War</a>
+				<a href="Wards.htm">Wards</a>
+				<a href="Weather.htm">Weather</a>
 			</div>
 			<div>Spells by Diety:
-				<a href="Vilify-13.github.io/Arstor.htm">Arstor</a>
-				<a href="Vilify-13.github.io/Karah.htm">Karah</a>
-				<a href="Vilify-13.github.io/Runath.htm">Runath</a>
-				<a href="Vilify-13.github.io/Devras.htm">Devras</a> | 
-				<a href="Vilify-13.github.io/Ako.htm">Ako</a>
-				<a href="Vilify-13.github.io/Ephra.htm">Ephra</a>
-				<a href="Vilify-13.github.io/Ralah.htm">Ralah</a> | 
-				<a href="Vilify-13.github.io/Lumnis.htm">Lumnis</a>
-				<a href="Vilify-13.github.io/Sartanis.htm">Sartanis</a> | 
-				<a href="Vilify-13.github.io/Ampharae.htm">Ampharae</a>
-				<a href="Vilify-13.github.io/Taaris.htm">Taaris</a>
-				<a href="Vilify-13.github.io/Thugal.htm">Thugal</a>
-				<a href="Vilify-13.github.io/Ultarius-Yttria.htm">Ultarius / Yttria</a>
-				<a href="Vilify-13.github.io/Unlo.htm">Unlo</a>
-				<a href="Vilify-13.github.io/Natrea.htm">Natrea</a>
-				<a href="Vilify-13.github.io/Koze.htm">Koze</a>
-				<a href="Vilify-13.github.io/Thera.htm">Thera</a>
-				<a href="Vilify-13.github.io/Joram.htm">Joram</a>
-				<a href="Vilify-13.github.io/Nilmatar.htm">Nilmatar</a>
-				<a href="Vilify-13.github.io/Laerissa.htm">Laerissa</a>
-				<a href="Vilify-13.github.io/Hequa.htm">Hequa</a>
-				<a href="Vilify-13.github.io/Darmeth.htm">Darmeth</a>
+				<a href="Arstor.htm">Arstor</a>
+				<a href="Karah.htm">Karah</a>
+				<a href="Runath.htm">Runath</a>
+				<a href="Devras.htm">Devras</a> | 
+				<a href="Ako.htm">Ako</a>
+				<a href="Ephra.htm">Ephra</a>
+				<a href="Ralah.htm">Ralah</a> | 
+				<a href="Lumnis.htm">Lumnis</a>
+				<a href="Sartanis.htm">Sartanis</a> | 
+				<a href="Ampharae.htm">Ampharae</a>
+				<a href="Taaris.htm">Taaris</a>
+				<a href="Thugal.htm">Thugal</a>
+				<a href="Ultarius-Yttria.htm">Ultarius / Yttria</a>
+				<a href="Unlo.htm">Unlo</a>
+				<a href="Natrea.htm">Natrea</a>
+				<a href="Koze.htm">Koze</a>
+				<a href="Thera.htm">Thera</a>
+				<a href="Joram.htm">Joram</a>
+				<a href="Nilmatar.htm">Nilmatar</a>
+				<a href="Laerissa.htm">Laerissa</a>
+				<a href="Hequa.htm">Hequa</a>
+				<a href="Darmeth.htm">Darmeth</a>
 	</div></header>
 	<div data-id="21" class="card alteration" data-school="Alteration" data-caster="wizard">
 		<header class="clearfix">
