--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="en-US"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
-<meta name="description" content="Vilify 2e spell content credit to Koibu">
+<meta name="description" content="Vilify 2e spell content">
 <meta name="keywords" content="D&amp;D, RPG, RPGs, DnD, Dungeons &amp; Dragons">
 <meta name="author" content="Neal Erickson, edits made by Kenneth Elliott aka Vilify">
 <link rel="shortcut icon" href="/hemlocksmadge.ico">
